# normal-form-transforms

./: README.md  normal-form-transforms.cabal
.github/workflows/: haskell.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: normal-form-transforms-0.1.0.0-inplace-nf-transforms.conf  package.cache
src/: Conversions.hs  Equivalence.hs  Formula.hs
tests/: Test.hs
